[metadata]
name = monasca

# Juno
version = 2014.7

summary = OpenStack Monitoring Service
description-file =
    README.md
author = Tong Li
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    monasca

data_files =
    /etc/monasca =
        etc/monasca.conf
        etc/monasca.ini
        etc/monasca-dashboard.ini
        etc/monasca-persister.conf

[entry_points]
console_scripts =
    monasca-service = monasca.microservice.server:main

monasca.microservice =
    es_persister = monasca.microservice.es_persister:ESPersister
    threshold = monasca.microservice.threshold:Threshold

monasca.dispatcher =
    metrics = monasca.v2.elasticsearch.metrics:MetricDispatcher
    versions = monasca.v2.elasticsearch.versions:VersionDispatcher
    alarmdefinitions = monasca.v2.elasticsearch.alarmdefinitions:AlarmDefinitionDispatcher

monasca.message.processor = 
    metrics_msg_fixer = monasca.microservice.metrics_fixer:MetricsFixer

paste.filter_factory =
    login = monasca.middleware.login:filter_factory
    inspector = monasca.middleware.inspector:filter_factory
    metric_validator = monasca.middleware.metric_validator:filter_factory

[pbr]
warnerrors = True
