[metadata]
name = monasca

# Juno
version = 2014.7

summary = OpenStack Monitoring Service
description-file =
    README.md
author = Tong Li
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    monasca

data_files =
    /etc/monasca =
        etc/monasca.conf
        etc/monasca.ini
        etc/monasca-dashboard.ini
        etc/metrics-persister.conf
        etc/alarms-persister.conf
        etc/monasca-notification.conf

[entry_points]
console_scripts =
    monasca-service = monasca.microservice.server:main

monasca.microservice =
    es_persister = monasca.microservice.es_persister:ESPersister
    threshold_engine = monasca.microservice.threshold_engine:ThresholdEngine
    notification_engine = monasca.microservice.notification_engine:NotificationEngine

monasca.dispatcher =
    metrics = monasca.v2.elasticsearch.metrics:MetricDispatcher
    versions = monasca.v2.elasticsearch.versions:VersionDispatcher
    alarmdefinitions = monasca.v2.elasticsearch.alarmdefinitions:AlarmDefinitionDispatcher
    notificationmethods = monasca.v2.elasticsearch.notificationmethods:NotificationMethodDispatcher

monasca.index.strategy =
    timed = monasca.microservice.timed_strategy:TimedStrategy
    fixed = monasca.microservice.fixed_strategy:FixedStrategy

monasca.message.processor = 
    metrics_msg_fixer = monasca.microservice.metrics_fixer:MetricsFixer
    notification_processor = monasca.microservice.notification_processor:NotificationProcessor
    threshold_processor = monasca.microservice.threshold_processor:NotificationProcessor

paste.filter_factory =
    login = monasca.middleware.login:filter_factory
    inspector = monasca.middleware.inspector:filter_factory
    metric_validator = monasca.middleware.metric_validator:filter_factory

[pbr]
warnerrors = True
